# kari-imprint

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/config/: default.toml
apps/api/src/api/: __init__.py  errors.py  main.py  processing.py  schemas_v3.py  settings.py  stats.py  storage.py
apps/api/tests/unit/: test_settings.py  test_v3_api_integration.py  test_v3_flow_schema.py  test_v3_schema_v2.py  test_v3_vertical_schema.py
apps/api/tests/web_api/: test_web_api.py
apps/web/: .env.local  package-lock.json  package.json  vite.config.ts
apps/web/apps/web/src/components/: V3MainControls.tsx
apps/web/scripts/: runFlowFixtures.ts  verifyPresetContract.mts
apps/web/src/: AppRouter.tsx  V3HomePage.tsx  WatermarkCanvasV3.tsx  apiV3.ts  autoLogo.ts  designTokens.ts  env.ts  localPreview.ts  placeholderExif.ts  styles.css  v3PresetDefinitions.ts  v3PresetSession.ts  v3Presets.ts  v3TemplateModel.ts  v3Types.ts
apps/web/src/components/: ImagePresetRail.tsx  InspectorPanelV3.tsx  TopBar.tsx  V3CategoryAdvanced.tsx  V3LeftRail.tsx  V3MainControls.tsx  V3RightRail.tsx
apps/web/src/v3_layout/: layoutEngine.ts
assets/: README.md
config/: config.ini  user.json
core/: __init__.py  config_loader.py  configs.py  exceptions.py  jinja2renders.py  logger.py  template_builder.py  util.py
deploy/: Caddyfile  README.md  aka-semi-utils-api.service  aka-semi-utils-web.env.example  kari-imprint-api.service  kari-imprint-web.env.example
deploy/legacy-watermark-placeholder/: index.html
deploy/scripts/: deploy-tencent.sh  deploy.sh  kari-imprint-web.service  kari-imprint.nginx.conf  start.sh  stop.sh
design/: v3-control-surface-and-layout-guardrails.md  v3-control-surface-guardrails.md  v3-region-based-layout.md
docs/: changelog.md  consistency-contract.md  development_workflow.md  flow-layout-architecture.md  roadmap.md  versioning.md
docs/archive/legacy-web-mvp/: dev-stats-panel.md  web_mvp_design.md
processor/: __init__.py  batch.py  core.py  filters.py  generators.py  mergers.py  schemas.py  v3_renderer.py  v3_watermark.py
scripts/: aka-semi-utils-web.service  deploy-hk.sh  deploy.sh  scrape_logos.py  semi-utils.nginx.conf  start.sh  stop.sh  verify_flow_layout_parity.py
shared/: __init__.py  field_registry.py  render_values.py
shared/v3_layout/: __init__.py  layout_engine.py
tests/: conftest.py
tests/integration/: test_batch_parallel.py  test_batch_perf.py  test_exif_sidecar.py  test_pipeline_engine.py  test_pipeline_exceptions.py
tests/test_v3_layout/: test_layout_engine.py
tests/unit/: test_batch_error_classification.py  test_batch_small_batch_fallback.py  test_color_parser.py  test_config_loader.py  test_config_unification.py  test_direction_consistency.py  test_exceptions.py  test_exif_batch.py  test_exif_cache.py  test_image_io.py  test_jinja2_helpers.py  test_perf.py  test_pipeline_engine_exif_inject.py  test_processor_decorator.py  test_processor_registry.py  test_processor_schemas.py  test_signature_filter.py  test_template_builder.py  test_v3_api_integration.py  test_v3_renderer.py
tests/web_api/: test_web_api.py
web_api/: main.py  processing.py  schemas_v3.py  settings.py  stats.py  storage.py
web_frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
web_frontend/src/: AppRouter.tsx  apiV3.ts  env.ts  main.tsx  v3Types.ts
web_frontend/src/components/: ImagePresetRail.tsx  TopBar.tsx  V3MainControls.tsx
