[project]
name = "semi-photo-utils"
version = "0.1.0"
description = "Public Web photo watermark tool with EXIF, logo, signature, and live preview"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "pillow>=12.1.0",
    "pillow-heif>=1.1.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[tool.poetry.dependencies]
python = ">=3.13"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
]

# ─────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: 标记为慢测试（依赖 exiftool、大图、IO 等）",
    "integration: 端到端集成测试",
]

# ─────────────────────────────────────────────────────────────
# coverage
# ─────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["core", "processor", "shared", "web_api"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ─────────────────────────────────────────────────────────────
# ruff
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".venv", "static", "config"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # 行长度由 ruff format 处理
    "B008",   # function-call-in-default-argument（PyQt 信号常用）
    "RUF001", # 字符串里允许中文歧义字符（项目使用大量中文）
    "RUF002", # docstring 同上
    "RUF003", # comment 同上
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM117"]
"gui/**/*.py" = ["B008"]

# ─────────────────────────────────────────────────────────────
# mypy
# ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["core", "processor"]

[[tool.mypy.overrides]]
module = ["gui.*", "tests.*"]
ignore_errors = true
