[project]
name = "kari-imprint"
version = "0.1.0"
description = "Kari Imprint - photography watermark tools (web, app, mini-program)"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[tool.uv.sources]
kari-core = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".venv", "node_modules", "dist", "__pycache__", "tests/fixtures", "config"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["B011", "SIM117"]
