[project]
name = "kari-imprint-api"
version = "0.1.1"
description = "FastAPI backend for Kari Imprint"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kari-core",
    "fastapi>=0.138.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: 标记为慢测试",
    "integration: 端到端集成测试",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM117"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
